--- a/app/templates/partials/relative_form.html.j2
+++ b/app/templates/partials/relative_form.html.j2
@@ -1,8 +1,8 @@
 <form method="post" action="/time/add" data-controller="form-switcher">
     <div class="row mb-3">
-        <div class="col-4">
+        <div class="col-md-4">
             <label class="form-label">Time</label>
-            <input class="form-control" type="text" name="time" id="form-time" required>
+            <input class="form-control" type="text" name="time" id="form-time" type="time" required>
         </div>
     </div>
 
