--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -30,7 +30,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Overtime</h4>
                     <h6 class="card-subtitle mb-2 text-muted">&nbsp;</h6>
-                    <p class="card-text fw-bold fs-3">{% if stats.get('overtime', 0) > 0 %}+{% endif %}{{ stats.get('overtime', 0) }}</p>
+                    <p class="card-text fw-bold fs-3">{{ stats.get('overtime', 0) }}</p>
                 </div>
             </div>
         </div>
