--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -13,7 +13,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Time Logged</h3>
                     <h6 class="card-subtitle mb-2 text-muted">This Week</h6>
-                    <p class="card-text fw-bold fs-3">{{ stats.get('logged_this_week', 0) }}</p>
+                    <p class="card-text fw-bold fs-4">{{ stats.get('logged_this_week', 0) }}</p>
                 </div>
             </div>
         </div>
@@ -22,7 +22,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Time Left</h4>
                     <h6 class="card-subtitle mb-2 text-muted">Today</h6>
-                    <p class="card-text fw-bold fs-3">{{ stats.get('hours_left_today', 'N/A') }}</p>
+                    <p class="card-text fw-bold fs-4">{{ stats.get('hours_left_today', 'N/A') }}</p>
                 </div>
             </div>
         </div>
@@ -31,7 +31,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Overtime</h4>
                     <h6 class="card-subtitle mb-2 text-muted">&nbsp;</h6>
-                    <p class="card-text fw-bold fs-3">{{ stats.get('overtime', 0) }}</p>
+                    <p class="card-text fw-bold fs-4">{{ stats.get('overtime', 0) }}</p>
                 </div>
             </div>
         </div>
@@ -52,93 +52,16 @@
             {% else %}
                 <button class="btn btn-primary" name="clock" value="in" type="submit">Clock In</button>
             {% endif %}
+
+            <button class="btn btn-secondary" type="button" data-bs-toggle="modal" data-bs-target="#form-modal">Add Manually</button>
         </form>
     </section>
 
     <hr />
 
     <!-- Add/Edit Modal -->
-    <section class="modal" tabindex="-1" id="form-modal">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Log Time</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="addEditForm" method="post" action="/time/add" data-controller="form-switcher">
-                        <div class="row mb-3">
-                            <div class="col-md-4">
-                                <label class="form-label">Date</label>
-                                <input class="form-control" type="text" name="date" id="form-date" type="date" required>
-                            </div>
-                            <div class="col-md-4">
-                                <label class="form-label">Start Time</label>
-                                <input class="form-control" type="text" name="start" id="form-start-time" type="time" required>
-                            </div>
-                            <div class="col-md-4">
-                                <label class="form-label">End Time</label>
-                                <input class="form-control" type="text" name="end" id="form-end-time" type="time" required>
-                            </div>
-
-                            <div class="mt-3">
-                                <label class="form-label">Note</label>
-                                <textarea class="form-control" name="note" rows="3"></textarea>
-                            </div>
-
-                            <input type="hidden" name="clock" value="manual">
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" onclick="document.getElementById('addEditForm').submit()" class="btn btn-primary">Save</button>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Time Log Table -->
-    <section id="records">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Start</th>
-                    <th scope="col">End</th>
-                    <th scope="col">Time Logged</th>
-                    <th scope="col">Notes</th>
-                    <th scope="col"><!-- Edit button --></th>
-                    <th scope="col"><!-- Delete button --></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for time in time_entries %}
-                    <tr>
-                        {% set start = arrow.get(time.start).to(tz) %}
-                        {% set end = arrow.get(time.end).to(tz) if time.end else '' %}
-                        {% set range_end = end or arrow.now().to(tz) %}
-                        {% set duration = range_end.timestamp() | int - start.timestamp() | int %}
+    <dynamic-frame :url="/frames/time-log-table"></dynamic-frame>
 
-                        <td>{{ start.format(date_fmt) }}</td>
-                        <td>{{ end.format(date_fmt) if end else 'Still clocked in' }}</td>
-                        <td>{{ start.humanize(range_end, only_distance=True, granularity=["hour", "minute"]) }}</td>
-                        <td>{{ time.note }}</td>
-                        <td>
-                            <a role="button" class="edit-time-entry" data-bs-toggle="modal" data-bs-target="#form-modal">
-                                <i class="bi bi-pencil-square" data-time-id="{{ time.id }}"></i>
-                            </a>
-                        </td>
-                        <td>
-                            <a role="button" class="delete-time-entry">
-                                <i class="bi bi-x-lg" data-time-id="{{ time.id }}"></i>
-                            </a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </section>
-
-    {% if not time_entries %}
-        <p>No time entries found</p>
-    {% endif %}
 {% endblock content %}
