--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -8,25 +8,22 @@
         {# TODO: Handle form POST target, it defaults to / since it's in a modal #}
         <form id="addEditForm" method="post" action="/frames/time_form/{{ row_id }}">
             <div class="row mb-3">
-                <div class="col-md-4">
-                    <label class="form-label">Date</label>
-                    <input class="form-control" type="text" name="date" id="form-date" type="date" required>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <label class="form-label">Start Time</label>
-                    <input class="form-control" type="text" name="start" id="form-start-time" type="time" required>
+                    <input class="form-control flatpickr" type="text" name="start" data-date-type="datetime" data-date-value="{{ values.get('start') }}" required>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <label class="form-label">End Time</label>
-                    <input class="form-control" type="text" name="end" id="form-end-time" type="time" required>
+                    <input class="form-control flatpickr" type="text" name="end" data-date-type="datetime" data-date-value="{{ values.get('end') }}" required>
                 </div>
 
                 <div class="mt-3">
                     <label class="form-label">Note</label>
-                    <textarea class="form-control" name="note" rows="3"></textarea>
+                    <textarea class="form-control" name="note" rows="3">{{ values.get('note') }}</textarea>
                 </div>
 
                 <input type="hidden" name="clock" value="manual">
+                <input type="hidden" name="row_id" value="{{ row_id }}">
             </div>
         </form>
     </div>
@@ -46,21 +43,24 @@
                 const modal = frame.closest(".modal.show");
                 const form = frame.querySelector("form");
 
+                let formData = new FormData(form);
+                let jsonRequest = JSON.stringify(Object.fromEntries(formData));
+
                 let response = await fetch('/frames/time_form/{{ row_id }}', {
                     method: 'POST',
-                    body: JSON.stringify({
-                        // TODO: Actually send the form data here
-                        id: 123
-                    })
+                    body: jsonRequest,
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
                 });
 
                 if (response.ok) {
                     // Close modal and refresh log table
                     modal.querySelector("#close").click();
-                    // TODO: Refresh table
+                    document.querySelector("#log-table").refresh();
                 } else {
                     // TODO: Show flash here
-                    alert("ERROR");
+                    alert("Something went wrong!");
                 }
             });
         })();
