--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -62,5 +62,5 @@
     <hr />
 
     <!-- Time Log Table -->
-    <dynamic-frame id="log-table" :url="/frames/time-log-table"></dynamic-frame>
+    <dynamic-frame id="log-table" :execute-scripts="true" :url="/frames/time-log-table"></dynamic-frame>
 {% endblock content %}
