--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -10,16 +10,16 @@
             <div class="row mb-3">
                 <div class="col-md-6">
                     <label class="form-label">Start Time</label>
-                    <input class="form-control flatpickr" type="text" name="start" data-date-type="datetime" data-date-value="{{ values.get('start') }}" required>
+                    <input class="form-control flatpickr" type="text" name="start" data-date-type="datetime" data-date-value="{{ values.get('start', '') }}" required>
                 </div>
                 <div class="col-md-6">
                     <label class="form-label">End Time</label>
-                    <input class="form-control flatpickr" type="text" name="end" data-date-type="datetime" data-date-value="{{ values.get('end') }}" required>
+                    <input class="form-control flatpickr" type="text" name="end" data-date-type="datetime" data-date-value="{{ values.get('end', '') }}" required>
                 </div>
 
                 <div class="mt-3">
                     <label class="form-label">Note</label>
-                    <textarea class="form-control" name="note" rows="3">{{ values.get('note') }}</textarea>
+                    <textarea class="form-control" name="note" rows="3">{{ values.get('note', '') }}</textarea>
                 </div>
 
                 <input type="hidden" name="clock" value="manual">
