--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -1,16 +1,16 @@
-.header > a {
+#header a {
     text-decoration: none;
     color: black
 }
 
-.header > a:hover {
+#header a:hover {
     color: #0d6efd;
     text-decoration: none;
     cursor: pointer;
 }
 
-.cog {
-    color: black;
+a.icon {
+    font-size: 24px;
 }
 
 .edit-time-entry {
