--- a/app/templates/pages/settings.html.j2
+++ b/app/templates/pages/settings.html.j2
@@ -20,6 +20,10 @@
                 <label class="form-label">Hours Per Day</label>
                 <input class="form-control" type="text" name="hours_per_day" id="hours_per_day" value="{{ settings.hours_per_day }}" required>
             </div>
+            <div class="mb-2">
+                <label class="form-label">Days Per Week</label>
+                <input class="form-control" type="number" name="days_per_week" id="days_per_week" value="{{ settings.days_per_week }}" required>
+            </div>
         </div>
         <button class="btn btn-primary" type="submit">Submit</button>
     </form>
