--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -9,51 +9,7 @@
     <modal-frame :url="/frames/time_form" :modal-id="time-add-modal" :modal-title="Add new time record"></modal-frame>
 
     <!-- Header Stats -->
-    <section id="stats" class="row mb-5">
-        <div class="col-md-4 mb-2">
-            <div class="card border-dark">
-                <div class="card-body">
-                    <h4 class="card-title">Time Logged</h3>
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-muted">Today</h6>
-                            <p class="card-text fw-bold fs-4">{{ stats.logged_today }}</p>
-                        </div>
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-muted">This Week</h6>
-                            <p class="card-text fw-bold fs-4">{{ stats.logged_this_week }}</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-2">
-            <div class="card border-dark">
-                <div class="card-body">
-                    <h4 class="card-title">Time Left</h4>
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-muted">Today</h6>
-                            <p class="card-text fw-bold fs-4">{{ stats.remaining_today }}</p>
-                        </div>
-                        <div>
-                            <h6 class="card-subtitle mb-2 text-muted">This Week</h6>
-                            <p class="card-text fw-bold fs-4">{{ stats.remaining_this_week }}</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-2">
-            <div class="card border-dark">
-                <div class="card-body">
-                    <h4 class="card-title">Overtime</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">&nbsp;</h6>
-                    <p class="card-text fw-bold fs-4">{{ stats.overtime }}</p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <dynamic-frame id="time-stats" :execute-scripts="true" :url="/frames/time-stats"></dynamic-frame>
 
     <!-- Clock in/out Form -->
     <section id="main">
