Add comments to scripts

--- a/app/templates/frames/time_log_table.html.j2
+++ b/app/templates/frames/time_log_table.html.j2
@@ -63,6 +63,7 @@
             if (response.status == 200) {
                 frame.emit("time:changed");
             } else {
+                // TODO: Show flash here
                 console.error(`Failed to delete time record ${id}: ${response.text}`)
             }
         }));
