--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -13,6 +13,7 @@
 
     <!-- Clock in/out Form -->
     <section id="main">
+        <!-- TODO: Change this to NOT submit a form and refresh the page on change -->
         <form method="post" action="/time/add">
             <div class="row mb-3">
                 <div class="col-md-4">
