--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -60,7 +60,7 @@
                     frame.emit("time:changed");
                 } else {
                     // TODO: Show flash here
-                    alert("Something went wrong!");
+                    console.error(`Failed to add time record: ${response.text}`)
                 }
             });
         })();
