--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -18,7 +18,7 @@
             <div class="row mb-3">
                 <div class="col-md-4">
                     <label class="form-label">Time</label>
-                    <input class="form-control flatpickr" type="text" name="time" id="form-time" data-date-type="datetime" required>
+                    <input class="form-control flatpickr" type="text" name="time" id="form-time" data-date-type="time" required>
                 </div>
             </div>
 
