--- a/app/templates/pages/home.html.j2
+++ b/app/templates/pages/home.html.j2
@@ -1,4 +1,4 @@
-{% extends 'layouts/wrapper.html.j2' %}
+{% extends "layouts/wrapper.html.j2" %}
 
 {% block content %}
     <script type="module" defer src="/static/js/home.js"></script>
@@ -18,12 +18,18 @@
             <div class="row mb-3">
                 <div class="col-md-4">
                     <label class="form-label">Time</label>
-                    <input class="form-control flatpickr" type="text" name="time" id="form-time" data-date-type="time" required>
+                    <input class="form-control flatpickr" type="text" name="time" id="form-time" data-date-type="time" required />
                 </div>
             </div>
 
             {% if clocked_in %}
                 <button class="btn btn-primary" name="clock" value="out" type="submit">Clock Out</button>
+
+                {% if on_break %}
+                    <button class="btn btn-primary" name="clock" value="break:end" type="submit">End Break</button>
+                {% else %}
+                    <button class="btn btn-warning" name="clock" value="break:start" type="submit">Start Break</button>
+                {% endif %}
             {% else %}
                 <button class="btn btn-primary" name="clock" value="in" type="submit">Clock In</button>
             {% endif %}
